--- a/index.html
+++ b/index.html
@@ -17,45 +17,48 @@
             background-size: 400% 400%; animation: moveBG 10s ease infinite; 
         }
         @keyframes moveBG { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
-        .app { display: flex; flex-direction: column; height: 100vh; }
-        .header { background: rgba(0,0,0,0.8); padding: 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); }
+        
+        .app-container { display: flex; flex-direction: column; height: 100vh; }
+        .head-bar { background: rgba(0,0,0,0.85); padding: 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); }
         #chat-win { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
-        .bubble { max-width: 80%; padding: 10px 15px; border-radius: 15px; background: rgba(255,255,255,0.05); border: 1px solid #333; backdrop-filter: blur(5px); }
-        .me { align-self: flex-start; border-right: 4px solid var(--gold); background: rgba(255,215,0,0.1); }
+        .bubble { max-width: 85%; padding: 12px; border-radius: 15px; background: rgba(255,255,255,0.07); border: 1px solid #333; backdrop-filter: blur(5px); }
+        .me { align-self: flex-start; border-right: 4px solid var(--gold); background: rgba(255,215,0,0.12); }
 
-        /* 🚀 منطقة الإرسال - تم تبسيطها جداً للعمل فوراً */
-        .footer { background: rgba(0,0,0,0.9); padding: 10px; display: flex; align-items: center; border-top: 1px solid #222; direction: ltr !important; }
-        #mInp { flex: 1; background: #111; color: #fff; padding: 12px; border-radius: 25px; border: 1px solid #444; outline: none; text-align: right; direction: rtl !important; }
-        .send-btn { background: none; border: none; font-size: 30px; cursor: pointer; padding: 0 10px; }
+        /* 🚀 منطقة الإرسال - إعادة هيكلة كاملة لمنع التعليق */
+        .input-bar { background: #000; padding: 12px; display: flex; align-items: center; border-top: 1px solid #222; direction: ltr !important; }
+        #text-box { flex: 1; background: #111; color: #fff; padding: 14px; border-radius: 25px; border: 1px solid #444; outline: none; text-align: right; direction: rtl !important; font-size: 16px; margin-left: 10px; }
+        .btn-rocket { background: none; border: none; font-size: 32px; cursor: pointer; padding: 0 5px; -webkit-tap-highlight-color: transparent; }
 
-        .side { position: fixed; top: 0; width: 280px; height: 100vh; background: rgba(10,10,10,0.95); transition: 0.3s; z-index: 2000; border: 1px solid var(--gold); }
-        #side-l { left: -285px; } #side-r { right: -285px; }
-        .open { left: 0 !important; right: 0 !important; }
-        .box { background: rgba(255,215,0,0.05); margin: 10px; padding: 10px; border-radius: 10px; border: 1px solid #333; }
-        .btn-act { width: 100%; padding: 8px; margin: 5px 0; background: #222; color: #fff; border: 1px solid var(--gold); border-radius: 5px; cursor: pointer; }
+        .side-menu { position: fixed; top: 0; width: 280px; height: 100vh; background: rgba(10,10,10,0.98); transition: 0.3s; z-index: 9999; border: 1px solid var(--gold); }
+        #menu-l { left: -285px; } #menu-r { right: -285px; }
+        .open-menu { left: 0 !important; right: 0 !important; }
+        .box-item { background: rgba(255,215,0,0.05); margin: 10px; padding: 10px; border-radius: 10px; border: 1px solid #333; }
+        .btn-gold { width: 100%; padding: 10px; margin: 5px 0; background: #1a1a1a; color: #fff; border: 1px solid var(--gold); border-radius: 8px; cursor: pointer; }
     </style>
 </head>
-<body onclick="closeAll()">
+<body onclick="closeAllMenus()">
 
-    <div class="app">
-        <div class="header">
-            <button onclick="toggleS('l', event)" style="background:none; border:none; font-size:22px; color:var(--gold);">⚙️</button>
-            <b style="color:var(--gold)">مملكة علوش 👑</b>
-            <button onclick="toggleS('r', event)" style="background:none; border:none; font-size:22px; color:var(--gold);">👥</button>
+    <div class="app-container">
+        <div class="head-bar">
+            <button onclick="toggleM('l', event)" style="background:none; border:none; font-size:24px; color:var(--gold);">⚙️</button>
+            <b style="color:var(--gold); text-shadow: 0 0 10px var(--gold);">مملكة علوش 👑</b>
+            <button onclick="toggleM('r', event)" style="background:none; border:none; font-size:24px; color:var(--gold);">👥</button>
         </div>
+
         <div id="chat-win"></div>
-        <div class="footer" onclick="event.stopPropagation()">
-            <button class="send-btn" type="button" onclick="fireMessage()">🚀</button>
-            <input type="text" id="mInp" placeholder="تحدث يا ملك..." onkeydown="if(event.key==='Enter') fireMessage()">
+
+        <div class="input-bar" onclick="event.stopPropagation()">
+            <button class="btn-rocket" type="button" onclick="pushMsg()">🚀</button>
+            <input type="text" id="text-box" placeholder="اكتب هنا يا ملك..." onkeydown="if(event.key==='Enter') pushMsg()">
         </div>
     </div>
 
-    <div id="side-l" class="side" onclick="event.stopPropagation()">
-        <h3 style="text-align:center; color:var(--gold);">⚙️ المميزات</h3>
-        <div class="box"><small style="color:var(--gold)">🤖 المسابقات</small><button class="btn-act" onclick="startQuiz()">سؤال سريع</button></div>
-        <div class="box"><small style="color:var(--gold)">✨ الزخرفة</small><input type="text" id="zInp" oninput="doZ()" placeholder="اسمك..." style="width:90%; background:#000; color:#fff; border:1px solid #444;"><div id="z-res"></div></div>
+    <div id="menu-l" class="side-menu" onclick="event.stopPropagation()">
+        <h3 style="text-align:center; color:var(--gold);">⚙️ الإعدادات</h3>
+        <div class="box-item"><small style="color:var(--gold)">🤖 بوت المملكة</small><button class="btn-gold" onclick="startQuiz()">طرح سؤال</button></div>
+        <div class="box-item"><small style="color:var(--gold)">✨ الزخرفة</small><input type="text" id="z-input" oninput="doZ()" placeholder="اسمك..." style="width:90%; background:#000; color:#fff; border:1px solid #444;"><div id="z-area"></div></div>
     </div>
-    <div id="side-r" class="side" onclick="event.stopPropagation()"><h3 style="text-align:center; color:var(--gold);">👥 المتصلون</h3><div id="u-list"></div></div>
+    <div id="menu-r" class="side-menu" onclick="event.stopPropagation()"><h3 style="text-align:center; color:var(--gold);">👥 المتصلون</h3><div id="user-list"></div></div>
 
 <script>
     const firebaseConfig = {
@@ -65,67 +68,68 @@
         projectId: "masterchat-f2da9"
     };
     if (!firebase.apps.length) firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-    const auth = firebase.auth();
+    const database = firebase.database();
+    const login = firebase.auth();
 
-    let myID, myD = { n: "علوش" }, qAns = "";
+    let userID, userData = { n: "علوش" }, quizAnswer = "";
 
-    auth.signInAnonymously().then(u => {
-        myID = u.user.uid;
-        db.ref('users/'+myID).on('value', s => {
-            myD = s.val() || myD;
-            db.ref('status/'+myID).set({ n: myD.n });
-            db.ref('status/'+myID).onDisconnect().remove();
+    login.signInAnonymously().then(u => {
+        userID = u.user.uid;
+        database.ref('users/'+userID).on('value', s => {
+            userData = s.val() || userData;
+            database.ref('status/'+userID).set({ n: userData.n });
+            database.ref('status/'+userID).onDisconnect().remove();
         });
-        loadChat();
+        startApp();
     });
 
-    // ✅ وظيفة الإرسال الجديدة والأكيدة
-    function fireMessage() {
-        var inputField = document.getElementById('mInp');
-        var text = inputField.value.trim();
+    // ✅ وظيفة الإرسال - تم تغيير كل أسمائها لمنع التداخل
+    function pushMsg() {
+        const field = document.getElementById('text-box');
+        const content = field.value.trim();
         
-        if(text === "") return;
+        if(!content) return;
 
-        // إرسال مباشر دون تعقيدات
-        db.ref('main_msgs').push({
-            uid: myID,
-            n: myD.n,
-            t: text,
+        // إرسال مباشر ببيانات جديدة
+        database.ref('main_msgs').push({
+            uid: userID,
+            n: userData.n,
+            t: content,
             time: Date.now()
-        }).then(function() {
-            inputField.value = ""; // مسح الخانة
-            inputField.focus();
-        }).catch(function(error) {
-            alert("خطأ: " + error.message);
+        }).then(() => {
+            field.value = ""; 
+            field.focus();
+        }).catch(e => {
+            alert("فشل الإرسال: " + e.message);
         });
     }
 
-    function loadChat() {
-        db.ref('main_msgs').limitToLast(50).on('child_added', s => {
+    function startApp() {
+        database.ref('main_msgs').limitToLast(40).on('child_added', s => {
             const d = s.val();
             const div = document.createElement('div');
-            div.className = `bubble ${d.uid === myID ? 'me' : ''}`;
+            div.className = `bubble ${d.uid === userID ? 'me' : ''}`;
+            div.style.marginBottom = "8px";
             div.innerHTML = `<b style="color:var(--gold); font-size:11px;">${d.n}</b><br>${d.t}`;
             document.getElementById('chat-win').appendChild(div);
             document.getElementById('chat-win').scrollTop = document.getElementById('chat-win').scrollHeight;
         });
-        db.ref('status').on('value', s => {
-            const l = document.getElementById('u-list'); l.innerHTML = '';
-            s.forEach(u => { l.innerHTML += `<div style="padding:10px; border-bottom:1px solid #222;">🟢 ${u.val().n}</div>`; });
+        database.ref('status').on('value', s => {
+            const l = document.getElementById('user-list'); l.innerHTML = '';
+            s.forEach(u => { l.innerHTML += `<div style="padding:12px; border-bottom:1px solid #222;">🟢 ${u.val().n}</div>`; });
         });
     }
 
-    function toggleS(id, e) { e.stopPropagation(); closeAll(); document.getElementById('side-'+id).classList.toggle('open'); }
-    function closeAll() { document.querySelectorAll('.side').forEach(s => s.classList.remove('open')); }
+    function toggleM(id, e) { e.stopPropagation(); closeAllMenus(); document.getElementById('menu-'+id).classList.add('open-menu'); }
+    function closeAllMenus() { document.querySelectorAll('.side-menu').forEach(s => s.classList.remove('open-menu')); }
     function doZ() {
-        const v = document.getElementById('zInp').value;
-        const res = document.getElementById('z-res');
+        const v = document.getElementById('z-input').value;
+        const res = document.getElementById('z-area');
         if(!v) return;
         const styles = [`👑 ${v} 👑`, `〆${v}〆`, `『${v}』` ];
-        res.innerHTML = styles.map(s => `<div class="btn-act" onclick="db.ref('users/'+myID).update({n:'${s}'}); alert('تم التغيير');">${s}</div>`).join('');
+        res.innerHTML = styles.map(s => `<div class="btn-gold" onclick="database.ref('users/'+userID).update({n:'${s}'}); alert('تم التغيير');">${s}</div>`).join('');
     }
-    function startQuiz() { qAns = "بغداد"; db.ref('main_msgs').push({ n: "🤖 بوت المملكة", t: "❓ ما هي عاصمة العراق؟", isBot: true }); closeAll(); }
+    function startQuiz() { quizAnswer = "بغداد"; database.ref('main_msgs').push({ n: "🤖 بوت المملكة", t: "❓ ما هي عاصمة العراق؟", isBot: true }); closeAllMenus(); }
 </script>
 </body>
 </html>
