--- a/index.html
+++ b/index.html
@@ -17,119 +17,85 @@
             background-size: 400% 400%; animation: moveBG 10s ease infinite; 
         }
         @keyframes moveBG { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
-        
-        .app-container { display: flex; flex-direction: column; height: 100vh; }
-        .head-bar { background: rgba(0,0,0,0.85); padding: 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); }
-        #chat-win { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
-        .bubble { max-width: 85%; padding: 12px; border-radius: 15px; background: rgba(255,255,255,0.07); border: 1px solid #333; backdrop-filter: blur(5px); }
-        .me { align-self: flex-start; border-right: 4px solid var(--gold); background: rgba(255,215,0,0.12); }
-
-        /* 🚀 منطقة الإرسال - إعادة هيكلة كاملة لمنع التعليق */
-        .input-bar { background: #000; padding: 12px; display: flex; align-items: center; border-top: 1px solid #222; direction: ltr !important; }
-        #text-box { flex: 1; background: #111; color: #fff; padding: 14px; border-radius: 25px; border: 1px solid #444; outline: none; text-align: right; direction: rtl !important; font-size: 16px; margin-left: 10px; }
-        .btn-rocket { background: none; border: none; font-size: 32px; cursor: pointer; padding: 0 5px; -webkit-tap-highlight-color: transparent; }
-
-        .side-menu { position: fixed; top: 0; width: 280px; height: 100vh; background: rgba(10,10,10,0.98); transition: 0.3s; z-index: 9999; border: 1px solid var(--gold); }
-        #menu-l { left: -285px; } #menu-r { right: -285px; }
-        .open-menu { left: 0 !important; right: 0 !important; }
-        .box-item { background: rgba(255,215,0,0.05); margin: 10px; padding: 10px; border-radius: 10px; border: 1px solid #333; }
-        .btn-gold { width: 100%; padding: 10px; margin: 5px 0; background: #1a1a1a; color: #fff; border: 1px solid var(--gold); border-radius: 8px; cursor: pointer; }
+        .app-view { display: flex; flex-direction: column; height: 100vh; }
+        .nav-bar { background: rgba(0,0,0,0.8); padding: 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); }
+        #chat-window { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
+        .msg-box { max-width: 80%; padding: 10px 15px; border-radius: 15px; background: rgba(255,255,255,0.05); border: 1px solid #333; backdrop-filter: blur(5px); }
+        .my-msg { align-self: flex-start; border-right: 4px solid var(--gold); background: rgba(255,215,0,0.1); }
+        .input-area { background: rgba(0,0,0,0.9); padding: 10px; display: flex; align-items: center; border-top: 1px solid #222; direction: ltr !important; }
+        #msg-input { flex: 1; background: #111; color: #fff; padding: 12px; border-radius: 25px; border: 1px solid #444; outline: none; text-align: right; direction: rtl !important; }
+        .btn-send { background: none; border: none; font-size: 30px; cursor: pointer; padding: 0 10px; }
+        .side-panel { position: fixed; top: 0; width: 280px; height: 100vh; background: rgba(10,10,10,0.98); transition: 0.3s; z-index: 2000; border: 1px solid var(--gold); }
+        #panel-l { left: -285px; } #panel-r { right: -285px; }
+        .is-open { left: 0 !important; right: 0 !important; }
     </style>
 </head>
-<body onclick="closeAllMenus()">
+<body onclick="closePanels()">
 
-    <div class="app-container">
-        <div class="head-bar">
-            <button onclick="toggleM('l', event)" style="background:none; border:none; font-size:24px; color:var(--gold);">⚙️</button>
-            <b style="color:var(--gold); text-shadow: 0 0 10px var(--gold);">مملكة علوش 👑</b>
-            <button onclick="toggleM('r', event)" style="background:none; border:none; font-size:24px; color:var(--gold);">👥</button>
+    <div class="app-view">
+        <div class="nav-bar">
+            <button onclick="toggleP('l', event)" style="background:none; border:none; font-size:22px; color:var(--gold);">⚙️</button>
+            <b style="color:var(--gold)">مملكة علوش 👑</b>
+            <button onclick="toggleP('r', event)" style="background:none; border:none; font-size:22px; color:var(--gold);">👥</button>
         </div>
-
-        <div id="chat-win"></div>
-
-        <div class="input-bar" onclick="event.stopPropagation()">
-            <button class="btn-rocket" type="button" onclick="pushMsg()">🚀</button>
-            <input type="text" id="text-box" placeholder="اكتب هنا يا ملك..." onkeydown="if(event.key==='Enter') pushMsg()">
+        <div id="chat-window"></div>
+        <div class="input-area" onclick="event.stopPropagation()">
+            <button class="btn-send" onclick="finalSend()">🚀</button>
+            <input type="text" id="msg-input" placeholder="تحدث يا ملك..." onkeydown="if(event.key==='Enter') finalSend()">
         </div>
     </div>
 
-    <div id="menu-l" class="side-menu" onclick="event.stopPropagation()">
-        <h3 style="text-align:center; color:var(--gold);">⚙️ الإعدادات</h3>
-        <div class="box-item"><small style="color:var(--gold)">🤖 بوت المملكة</small><button class="btn-gold" onclick="startQuiz()">طرح سؤال</button></div>
-        <div class="box-item"><small style="color:var(--gold)">✨ الزخرفة</small><input type="text" id="z-input" oninput="doZ()" placeholder="اسمك..." style="width:90%; background:#000; color:#fff; border:1px solid #444;"><div id="z-area"></div></div>
+    <div id="panel-l" class="side-panel" onclick="event.stopPropagation()">
+        <h3 style="text-align:center; color:var(--gold);">⚙️ المميزات</h3>
+        <div style="padding:10px;"><button style="width:100%; padding:10px; background:#222; color:#fff; border:1px solid var(--gold);" onclick="location.reload()">تحديث الاتصال 🔄</button></div>
     </div>
-    <div id="menu-r" class="side-menu" onclick="event.stopPropagation()"><h3 style="text-align:center; color:var(--gold);">👥 المتصلون</h3><div id="user-list"></div></div>
+    <div id="panel-r" class="side-panel" onclick="event.stopPropagation()"><h3 style="text-align:center; color:var(--gold);">👥 المتصلون</h3><div id="user-list"></div></div>
 
 <script>
+    // ⚠️ تأكد من الرابط هنا (DatabaseURL)
     const firebaseConfig = {
         apiKey: "AIzaSyDpjqkb4U-RF71r_Zv3tHAV9wWWe2L3pEQ",
         authDomain: "masterchat-f2da9.firebaseapp.com",
-        databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com",
+        databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com", 
         projectId: "masterchat-f2da9"
     };
+
     if (!firebase.apps.length) firebase.initializeApp(firebaseConfig);
     const database = firebase.database();
-    const login = firebase.auth();
 
-    let userID, userData = { n: "علوش" }, quizAnswer = "";
+    let myID = "user_" + Math.floor(Math.random() * 1000); // معرف مؤقت للتجربة
 
-    login.signInAnonymously().then(u => {
-        userID = u.user.uid;
-        database.ref('users/'+userID).on('value', s => {
-            userData = s.val() || userData;
-            database.ref('status/'+userID).set({ n: userData.n });
-            database.ref('status/'+userID).onDisconnect().remove();
-        });
-        startApp();
-    });
+    function finalSend() {
+        const inp = document.getElementById('msg-input');
+        const val = inp.value.trim();
+        if(!val) return;
 
-    // ✅ وظيفة الإرسال - تم تغيير كل أسمائها لمنع التداخل
-    function pushMsg() {
-        const field = document.getElementById('text-box');
-        const content = field.value.trim();
-        
-        if(!content) return;
-
-        // إرسال مباشر ببيانات جديدة
+        // إرسال مباشر مع محاولة فحص الاتصال
         database.ref('main_msgs').push({
-            uid: userID,
-            n: userData.n,
-            t: content,
+            n: "علوش",
+            t: val,
             time: Date.now()
         }).then(() => {
-            field.value = ""; 
-            field.focus();
-        }).catch(e => {
-            alert("فشل الإرسال: " + e.message);
+            inp.value = "";
+            inp.focus();
+        }).catch(err => {
+            alert("المشكلة في الفايربيس عندك: " + err.message);
         });
     }
 
-    function startApp() {
-        database.ref('main_msgs').limitToLast(40).on('child_added', s => {
-            const d = s.val();
-            const div = document.createElement('div');
-            div.className = `bubble ${d.uid === userID ? 'me' : ''}`;
-            div.style.marginBottom = "8px";
-            div.innerHTML = `<b style="color:var(--gold); font-size:11px;">${d.n}</b><br>${d.t}`;
-            document.getElementById('chat-win').appendChild(div);
-            document.getElementById('chat-win').scrollTop = document.getElementById('chat-win').scrollHeight;
-        });
-        database.ref('status').on('value', s => {
-            const l = document.getElementById('user-list'); l.innerHTML = '';
-            s.forEach(u => { l.innerHTML += `<div style="padding:12px; border-bottom:1px solid #222;">🟢 ${u.val().n}</div>`; });
-        });
-    }
+    // تحميل الرسائل
+    database.ref('main_msgs').limitToLast(30).on('child_added', s => {
+        const d = s.val();
+        const div = document.createElement('div');
+        div.className = 'msg-box';
+        div.style.marginBottom = "8px";
+        div.innerHTML = `<b style="color:var(--gold); font-size:11px;">${d.n}</b><br>${d.t}`;
+        document.getElementById('chat-window').appendChild(div);
+        document.getElementById('chat-window').scrollTop = document.getElementById('chat-window').scrollHeight;
+    });
 
-    function toggleM(id, e) { e.stopPropagation(); closeAllMenus(); document.getElementById('menu-'+id).classList.add('open-menu'); }
-    function closeAllMenus() { document.querySelectorAll('.side-menu').forEach(s => s.classList.remove('open-menu')); }
-    function doZ() {
-        const v = document.getElementById('z-input').value;
-        const res = document.getElementById('z-area');
-        if(!v) return;
-        const styles = [`👑 ${v} 👑`, `〆${v}〆`, `『${v}』` ];
-        res.innerHTML = styles.map(s => `<div class="btn-gold" onclick="database.ref('users/'+userID).update({n:'${s}'}); alert('تم التغيير');">${s}</div>`).join('');
-    }
-    function startQuiz() { quizAnswer = "بغداد"; database.ref('main_msgs').push({ n: "🤖 بوت المملكة", t: "❓ ما هي عاصمة العراق؟", isBot: true }); closeAllMenus(); }
+    function toggleP(id, e) { e.stopPropagation(); closePanels(); document.getElementById('panel-'+id).classList.toggle('is-open'); }
+    function closePanels() { document.querySelectorAll('.side-panel').forEach(p => p.classList.remove('is-open')); }
 </script>
 </body>
 </html>
