--- a/index.html
+++ b/index.html
@@ -2,84 +2,138 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>👑 مملكة علوش | نظام الرقابة الملكي</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>👑 مملكة علوش | الإصدار المستقر</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
         :root { --gold: #d4af37; }
-        body { margin: 0; font-family: 'Segoe UI', sans-serif; background: #000 url('https://images.unsplash.com/photo-1518709268805-4e9042af9f23?q=80&w=1920') no-repeat center center fixed; background-size: cover; color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
-        #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: -1; }
-
-        header { background: rgba(15, 15, 15, 0.95); padding: 12px 20px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); z-index: 1000; }
-        .nav-btn { background: #222; border: 1px solid var(--gold); color: var(--gold); padding: 8px 15px; border-radius: 8px; cursor: pointer; font-weight: bold; }
-
-        #wrapper { display: flex; flex: 1; position: relative; overflow: hidden; }
-        .sidebar { position: absolute; top: 0; width: 280px; height: 100%; background: rgba(10, 10, 10, 0.98); transition: 0.4s ease; z-index: 1001; border: 1px solid #333; overflow-y: auto; }
-        .open-right { right: 0 !important; } .open-left { left: 0 !important; }
-        #admin-panel { right: -300px; border-left: 2px solid red; } 
-        #color-panel { right: -300px; border-left: 2px solid var(--gold); } 
-        #users-panel { left: -300px; border-right: 2px solid var(--gold); }
-
-        #messages { flex: 1; overflow-y: auto; padding: 25px; background: rgba(0,0,0,0.3); backdrop-filter: blur(8px); }
-        .line { border-bottom: 1px solid rgba(255,255,255,0.05); padding: 12px 0; }
-
-        /* تأثيرات الخطوط */
-        .fire { color: #ff4500; font-weight: bold; text-shadow: 0 -2px 10px #ff0, 0 -5px 20px #f00; animation: f 1s infinite alternate; }
-        .gold-flow { background: linear-gradient(to right, #bf953f, #fcf6ba, #b38728); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-size: 200% auto; animation: g 2s linear infinite; font-weight: bold; }
-        .neon-glow { color: #0ff; font-weight: bold; text-shadow: 0 0 10px #0ff, 0 0 20px #0ff; animation: n 1.5s infinite alternate; }
-        @keyframes f { from { text-shadow: 0 -2px 5px #ff0; } to { text-shadow: 0 -5px 15px #f00; } }
-        @keyframes g { to { background-position: 200% center; } }
-        @keyframes n { from { opacity: 0.6; } to { opacity: 1; } }
-
-        #emoji-box { position: absolute; bottom: 85px; right: 20px; width: 320px; height: 350px; background: #111; border: 2px solid var(--gold); display: none; flex-direction: column; z-index: 2000; border-radius: 15px; }
-        .emoji-scroll { overflow-y: auto; display: grid; grid-template-columns: repeat(6, 1fr); gap: 10px; padding: 15px; }
-        .emoji-item { cursor: pointer; font-size: 28px; text-align: center; }
-
-        footer { padding: 15px; background: rgba(15, 15, 15, 0.95); border-top: 1px solid var(--gold); display: flex; gap: 10px; }
-        input[type="text"] { flex: 1; padding: 12px; border-radius: 20px; border: 1px solid #444; background: #000; color: #fff; outline: none; }
+        body { margin: 0; font-family: sans-serif; background: #000 url('https://images.unsplash.com/photo-1518709268805-4e9042af9f23?q=80&w=1920') no-repeat center center fixed; background-size: cover; color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
+        #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.6); z-index: -1; }
+        header { background: rgba(0,0,0,0.9); padding: 10px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); }
+        .nav-btn { background: #111; border: 1px solid var(--gold); color: var(--gold); padding: 5px 10px; border-radius: 5px; cursor: pointer; }
+        #wrapper { flex: 1; display: flex; position: relative; overflow: hidden; }
+        #messages { flex: 1; overflow-y: auto; padding: 20px; background: rgba(0,0,0,0.3); backdrop-filter: blur(5px); }
+        .line { border-bottom: 1px solid rgba(255,255,255,0.1); padding: 8px 0; word-wrap: break-word; }
+        .sidebar { position: absolute; top: 0; width: 250px; height: 100%; background: #000; transition: 0.3s; z-index: 1001; border: 1px solid #333; }
+        #color-panel { right: -260px; } #admin-panel { right: -260px; top: 50px; height: auto; }
+        .open { right: 0 !important; }
+        #emoji-box { position: absolute; bottom: 70px; right: 10px; width: 280px; height: 250px; background: #111; border: 2px solid var(--gold); display: none; flex-direction: column; z-index: 2000; border-radius: 10px; }
+        .emoji-scroll { overflow-y: auto; display: grid; grid-template-columns: repeat(5, 1fr); padding: 10px; gap: 5px; }
+        footer { padding: 10px; background: #000; border-top: 1px solid var(--gold); display: flex; gap: 5px; align-items: center; }
+        #msg-in { flex: 1; padding: 10px; border-radius: 5px; border: 1px solid #444; background: #111; color: #fff; }
+        /* تأثيرات */
+        .fire { color: #ff4500; font-weight: bold; text-shadow: 0 0 8px #f00; }
+        .gold-flow { color: var(--gold); font-weight: bold; text-shadow: 0 0 8px #fff; }
     </style>
 </head>
-<body onload="trackVisitor()">
+<body>
     <div id="overlay"></div>
     <header>
         <button class="nav-btn" onclick="toggleSide('admin-panel')">⚙️ الإدارة</button>
-        <button class="nav-btn" onclick="toggleSide('color-panel')">🎨 الصبغ والاسم</button>
-        <div style="font-weight: bold; color: var(--gold); font-size: 22px;">👑 مـمـلـكـة عـلـوش</div>
-        <button class="nav-btn" onclick="toggleSide('users-panel', 'left')">👥 المتصلون</button>
+        <div style="color: var(--gold); font-weight: bold;">👑 مـمـلـكـة عـلـوش</div>
+        <button class="nav-btn" onclick="toggleSide('color-panel')">🎨 الصبغ</button>
     </header>
 
     <div id="wrapper">
         <div id="admin-panel" class="sidebar">
-            <div style="padding:20px;">
-                <h3>⚙️ التحكم الملكي</h3>
-                <button class="nav-btn" onclick="viewLogs()" style="width:100%; margin-bottom:10px;">👁️ سجل الزوار</button>
-                <button class="nav-btn" onclick="clearDB()" style="width:100%; color:red;">🧹 تصفير الشات</button>
+            <div style="padding:15px;">
+                <button class="nav-btn" onclick="viewLogs()" style="width:100%">👁️ سجل الزوار</button><br><br>
+                <button class="nav-btn" onclick="clearDB()" style="width:100%; color:red;">🧹 مسح الشات</button>
             </div>
         </div>
-        
         <div id="color-panel" class="sidebar">
-            <div style="padding:20px;">
-                <h3>👤 الهوية والصبغ</h3>
-                <input type="text" id="my-name" value="علوش" placeholder="ضع اسمك هنا..." style="width:90%; padding:10px; background:#000; color:var(--gold); border:1px solid var(--gold); border-radius:5px;">
-                <hr>
-                <select id="f-anim" onchange="updateS()" style="width:100%; padding:10px; background:#000; color:#fff; border:1px solid var(--gold);">
+            <div style="padding:15px;">
+                <label>النك:</label>
+                <input type="text" id="my-name" value="علوش" style="width:90%; margin-bottom:10px;"><br>
+                <label>التأثير:</label>
+                <select id="f-anim" onchange="updateS()" style="width:100%">
                     <option value="">عادي</option>
-                    <option value="fire">🔥 خط النار</option>
-                    <option value="gold-flow">💰 الذهب السائل</option>
-                    <option value="neon-glow">💎 نيون مشع</option>
-                </select>
-                <input type="color" id="f-color" value="#ffffff" onchange="updateS()" style="width:100%; height:45px; margin-top:10px;">
+                    <option value="fire">🔥 نار</option>
+                    <option value="gold-flow">💰 ذهب</option>
+                </select><br><br>
+                <input type="color" id="f-color" value="#ffffff" onchange="updateS()" style="width:100%">
             </div>
         </div>
-
-        <div id="chat-window" style="flex:1; display:flex; flex-direction:column; position:relative;">
-            <div id="messages"></div>
-            <div id="emoji-box"><div class="emoji-scroll" id="emoji-list"></div></div>
-        </div>
-        <div id="users-panel" class="sidebar"><div style="padding:20px;"><h3>👥 المتصلون</h3><div style="color:lime;">● الملك علوش</div></div></div>
+        <div id="messages"></div>
+        <div id="emoji-box"><div class="emoji-scroll" id="emoji-list"></div></div>
     </div>
 
     <footer>
         <button class="nav-btn" onclick="toggleEmoji()">😊</button>
-        <button class="nav-btn" onclick="document.getElementById('img-up').click()">🖼️</button>
-        <input type="
+        <input type="text" id="msg-in" placeholder="اكتب هنا...">
+        <button class="nav-btn" onclick="sendMsg()" style="background:var(--gold); color:#000;">إرسال</button>
+    </footer>
+
+    <script>
+        // املأ بيانات الفايربيس الخاصة بك هنا
+        const firebaseConfig = { databaseURL: "https://alloush-kingdom-default-rtdb.firebaseio.com" };
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.database();
+        let myStyle = { c: '#ffffff', a: '' };
+
+        function updateS() { 
+            myStyle.c = document.getElementById('f-color').value; 
+            myStyle.a = document.getElementById('f-anim').value; 
+        }
+
+        function toggleSide(id) { document.getElementById(id).classList.toggle('open'); }
+        function toggleEmoji() { 
+            const b = document.getElementById('emoji-box');
+            b.style.display = (b.style.display === 'flex') ? 'none' : 'flex'; 
+        }
+
+        // إرسال رسالة
+        function sendMsg() {
+            const inp = document.getElementById('msg-in');
+            const name = document.getElementById('my-name').value;
+            if(inp.value.trim()) {
+                db.ref("messages").push().set({
+                    u: name, t: inp.value, s: myStyle, time: new Date().toLocaleTimeString()
+                });
+                inp.value = "";
+            }
+        }
+
+        // استقبال الرسائل
+        db.ref("messages").limitToLast(30).on("child_added", (snap) => {
+            const d = snap.val();
+            const div = document.createElement('div');
+            div.className = 'line';
+            div.innerHTML = `<b style="color:var(--gold)">${d.u}:</b> <span class="${d.s.a}" style="color:${d.s.c}">${d.t}</span>`;
+            const box = document.getElementById('messages');
+            box.appendChild(div);
+            box.scrollTop = box.scrollHeight;
+        });
+
+        // تعقب الزوار
+        function track() {
+            const name = document.getElementById('my-name').value;
+            db.ref("activity_log").push().set({ user: name, time: new Date().toLocaleString() });
+        }
+
+        function viewLogs() {
+            db.ref("activity_log").limitToLast(5).once("value", (s) => {
+                let res = "سجل الدخول:\n";
+                s.forEach(c => { res += c.val().user + " - " + c.val().time + "\n"; });
+                alert(res);
+            });
+        }
+
+        // توليد الإيموجيات
+        const eList = document.getElementById('emoji-list');
+        const emojis = ["😂","😍","🔥","👑","💎","❤️","✨","👍","✔️","⚔️","🛡️","🦁"];
+        emojis.forEach(e => {
+            let span = document.createElement('span');
+            span.innerText = e; span.style.cursor="pointer"; span.style.fontSize="25px";
+            span.onclick = () => { document.getElementById('msg-in').value += e; };
+            eList.appendChild(span);
+        });
+
+        function clearDB() { if(confirm("مسح؟")) db.ref("messages").remove(); location.reload(); }
+        document.getElementById('msg-in').onkeypress = (e) => { if(e.key==='Enter') sendMsg(); };
+        
+        window.onload = track;
+    </script>
+</body>
+</html>
